--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ uvicorn[standard]==0.29.0
 # =========================
 pydantic==2.6.4
 pydantic-settings==2.2.1
+email-validator==2.1.1
 
 # =========================
 # Authentication & Security
